[tool.poetry]
name = "supabase"
version = "1.0.3"
description = "Supabase client for Python."
authors = ["Joel Lee <joel@joellee.org>", "Leon Fedden <leonfedden@gmail.com>", "Daniel Reinón García <danielreinon@outlook.com>", "Leynier Gutiérrez González <leynier41@gmail.com>", "Anand"]
homepage = "https://github.com/supabase-community/supabase-py"
repository = "https://github.com/supabase-community/supabase-py"
documentation = "https://github.com/supabase-community/supabase-py"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
postgrest = {git = "https://github.com/necrosskull/postgrest-py.git"}
realtime = "^1.0.0"
gotrue = "^1.0.1"
httpx = "^0.24.1"
storage3 = {git = "https://github.com/supabase-community/storage-py.git"}
supafunc = {git = "https://github.com/supabase-community/functions-py.git"}
python-semantic-release = "7.34.6"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
black = "^23.1"
pytest = "^7.4.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest-cov = "^4.1.0"
commitizen = "^3.5.2"
python-semantic-release = "^7.34.6"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
tests = 'poetry_scripts:run_tests'

[tool.semantic_release]
version_variable = "supabase/__version__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
commit_subject = "chore(release): bump version to v{version}"
build_command = "curl -sSL https://install.python-poetry.org | python - --preview && export PATH=\"/github/home/.local/bin:$PATH\" && poetry install && poetry build"
upload_to_repository = true
branch = "develop"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
